fix spacing

--- a/flexbox/10-styles.css
+++ b/flexbox/10-styles.css
@@ -366,7 +366,7 @@
   }
 
   .section-hero .section-body {
-    padding: 10rem, 4rem;
+    padding: 10rem 4rem;
   }
   .section-hero .section-title {
     margin-bottom: 5rem;
